--- a/src/pages/Home/Registro.css
+++ b/src/pages/Home/Registro.css
@@ -1,3 +1,10 @@
+/* Ocultar scrollbars pero manteniendo funcionalidad */
+*{
+  -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+  display: none;
+}
 
 .Registro {
     padding: 20px;
